[gd_scene load_steps=6 format=3 uid="uid://traderpanel"]

[ext_resource type="Script" uid="uid://ebvn8n6vsrd8" path="res://scripts/UI/TraderPanel.gd" id="1_trader_panel"]

[sub_resource type="StyleBoxFlat" id="StylePanel"]
bg_color = Color(0.05, 0.09, 0.14, 0.85)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.2, 0.45, 0.75, 0.65)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_normal"]
bg_color = Color(0, 0, 0, 0)
border_width_bottom = 2
border_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_pressed"]
bg_color = Color(0.2, 0.8, 1, 0.25)
border_width_bottom = 3
border_color = Color(0.2, 0.8, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_hover"]
bg_color = Color(0.2, 0.8, 1, 0.15)
border_width_bottom = 2
border_color = Color(0.2, 0.8, 1, 0.8)

[node name="TraderPanel" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 260.0
offset_top = 80.0
offset_right = -20.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StylePanel")
script = ExtResource("1_trader_panel")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 12

[node name="TraderTitle" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.8, 1, 1)
theme_override_font_sizes/font_size = 18
text = "Trading Station"

[node name="ConsumablesTitle" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Consumables"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="WeaponsTitle" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Weapons"

[node name="WeaponsScroll" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/WeaponsScroll"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ShipsTitle" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Ships"

[node name="ShipsScroll" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/ShipsScroll"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Footer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="CoinsLabel" type="Label" parent="VBoxContainer/Footer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BuyButton" type="Button" parent="VBoxContainer/Footer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_btn_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_btn_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_hover")
text = "Buy Item"

[node name="CloseButton" type="Button" parent="VBoxContainer/Footer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_btn_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_btn_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_hover")
text = "Close"
